# study-reed-solomon-ec

./: .clang-format  CMakeLists.txt  LICENSE  README.md  common.cc  common.h  galois.cc  galois.h  main.cc  matric.cc  matric.h  reedsolomon.cc  reedsolomon.h
